welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:56: error: not found: value veticale
	veticale()
        ^