welcome.lessons.welcome.methods.picture.PictureMono.scala.code
def marquer()
{
	baisseBrosse()
	leveBrosse()
}
def ligne()
{
	marquer()
	avance()
	avance()

	marquer()
	avance()
	avance()

	marquer()

	avance()
}
def horizontale()
{
	avance()
	droite()
	ligne()

	gauche()
	avance()
	avance()

	droite()
	ligne()
	gauche()

	avance()
	avance()
}
def verticale()
{
	avance()
	gauche()
	ligne()
	droite()

	avance()
	avance()
	gauche()
	ligne()
	droite()

	avance(); avance()
	
}
override def run() 
{
	veticale()
	gauche()
	horizontale()
}
